implement extra identifier on a repository source